--- a/ansible/nginx.yml
+++ b/ansible/nginx.yml
@@ -8,7 +8,7 @@
   tasks:
     - name: Copy the nginx configuration file
       template:
-        src: ../templates/nginx.conf.j2
+        src: nginx.conf.j2
         dest: /etc/nginx/nginx.conf
       notify:
         - restart nginx
