--- a/ansible/nginx.yml
+++ b/ansible/nginx.yml
@@ -12,3 +12,7 @@
         dest: /etc/nginx/nginx.conf
       notify:
         - restart nginx
+
+  handlers:
+    - name: restart nginx
+      action: service name=nginx state=restarted
